--- a/templates/app/partials/_sidebar.html
+++ b/templates/app/partials/_sidebar.html
@@ -33,7 +33,8 @@
                     <li class="nav-item"> <a class="nav-link" href="{% url 'services:category_list' %}">Categories</a></li>
                     <li class="nav-item"> <a class="nav-link" href="{% url 'services:service_list' %}">Services</a></li>
                     <li class="nav-item"> <a class="nav-link" href="{% url 'jobs:job_list' %}">Jobs</a></li>
-                    <li class="nav-item"> <a class="nav-link" href="{% url 'jobs:skill_list' %}">Skills</a></li>
+                    <li class="nav-item"> <a class="nav-link" href="{% url 'jobs:company_list' %}">Companis</a></li>
+                    <li class="nav-item"> <a class="nav-link" href="{% url 'jobs:department_list' %}">Departments</a></li>
                     <li class="nav-item"> <a class="nav-link" href="{% url 'applicants:applicant_list' %}">Applicants</a></li>
                     <li class="nav-item"> <a class="nav-link" href="{% url 'applicants:jobapplication_list' %}">JobApplication</a></li>
                     <li class="nav-item"> <a class="nav-link" href="{% url 'recruiters:recruiter_list' %}">Recruiters</a></li>
